Feature/final pipeline (#4)
* feat: Refatora para usar Faker e configurar banco de dados para testes

* feat: Refatora para usar Faker e configurar banco de dados para testes

* Refactor: Remoção dos espaços desnecessários

* Refactor: Aprimoramento do processo de login utilizando autenticação por banco de dados.
Esta alteração refatora o processo de login para autenticar usuários com base em um banco de dados. Isso aumenta a segurança e proporciona uma solução mais robusta e escalável.

* Refactor: Aprimoramento do processo de login utilizando autenticação por banco de dados.
Esta alteração refatora o processo de login para autenticar usuários com base em um banco de dados. Isso aumenta a segurança e proporciona uma solução mais robusta e escalável.

* Refactor: Aprimoramento do processo de login utilizando autenticação por banco de dados.
Esta alteração refatora o processo de login para autenticar usuários com base em um banco de dados. Isso aumenta a segurança e proporciona uma solução mais robusta e escalável.

* feat: Implementação de Jenkinsfile para pipeline de CI/CD automatizado.
Esta alteração introduz um Jenkinsfile para automatizar o processo de construção, teste e implantação. Isso possibilita a integração contínua e a entrega contínua para o projeto.
O Jenkinsfile define as seguintes etapas:
          Build
          Test
          Deploy

Mais detalhes sobre a configuração do pipeline podem ser encontrados no Jenkinsfile.

* feat: Melhorias gerais

* feat: Melhorias no Search e implementaçao do CSV para fazer leitura de arquivos excel.

* feat: Remover arquivos relacionados a Pedidos devido à falta de estoque no ambiente de teste

Este commit remove todos os arquivos associados ao processamento e gerenciamento de Orders da base de código. A decisão foi tomada porque o ambiente de teste alvo não possui nenhum produto com estoque disponível.

Incluir a funcionalidade relacionada a pedidos seria irrelevante e potencialmente enganoso durante os testes nest